@@ -1,3 +1,10 @@
+1998-12-13  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* main.c, hex_document.c: fixed some cast warnings.
+	* gtkhex.c: fixed size_allocate and size_request handlers.
+	fixed positioning of hex and ascii view and display size
+	recalculation.
+	
 1998-12-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* callbacks.c (about_destroy_cb): new callback. sets
